--- a/pages/clients.html
+++ b/pages/clients.html
@@ -70,7 +70,6 @@
 										aria-label="Search">
 									<div class="input-group-append">
 										<button class="btn btn-sidebar _icon-search">
-
 										</button>
 									</div>
 								</div>
@@ -98,7 +97,7 @@
 
 									<li class="nav-item">
 										<a href="../index.html" class="nav-link p-2  font-weight-bold _icon-dashboard">
-											<p>Дашборд</p>
+											<p>Клиенты</p>
 										</a>
 
 									</li>
@@ -108,12 +107,12 @@
 										</a>
 									</li>
 									<li class="nav-item">
-										<a href="./clients.html" class="nav-link font-weight-bold p-2 _icon-client">
+										<a href="./clients.html" class="nav-link _active-page font-weight-bold p-2 _icon-client">
 											<p>Клиенты</p>
 										</a>
 									</li>
 									<li class="nav-item">
-										<a href="templates.html" class="nav-link _active-page font-weight-bold p-2 _icon-pattern">
+										<a href="templates.html" class="nav-link  font-weight-bold p-2 _icon-pattern">
 											<p> Шаблоны</p>
 										</a>
 									</li>
@@ -135,7 +134,7 @@
 
 				</button>
 				<div class="dropdown-menu" role="menu">
-					<a href="./create-template.html" class="dropdown-item font-weight-bold _icon-template ">Шаблон</a>
+					<a href="./create-template.html" class="dropdown-item font-weight-bold _icon-user ">Клиента</a>
 					<button type="button" class="dropdown-item font-weight-bold _icon-folder">Папку</button>
 				</div>
 			</div>
@@ -147,8 +146,8 @@
 					</div>
 
 					<ul class="search-items__list ">
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-user ">
+							<span class="flex-fill "> Павлюшенков Игорь Игнатьевич</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -158,8 +157,8 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-user ">
+							<span class="flex-fill "> Николаев Бартез Игроревич</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -169,8 +168,8 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-user ">
+							<span class="flex-fill "> Вертикашин Кондрат Паскальевич</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -180,8 +179,8 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-user ">
+							<span class="flex-fill "> Павлюшенков Игорь Игнатьевич</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
