--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -39,7 +39,7 @@
 	<div class="wrapper">
 
 		<!-- Начала главгый сайдбар -->
-		<aside class="main-sidebar">
+		<aside class="main-sidebar sidebar-no-expand">
 
 
 			<!-- Sidebar -->
@@ -52,8 +52,7 @@
 				<div class="os-padding">
 					<div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
 						<div class="os-content px-3">
-							<a class="pl-3 mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#"
-								role="button"></a>
+							<a class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#" role="button"></a>
 							<!-- Sidebar user (optional) -->
 							<div class="user-panel mt-4  mb-4 d-flex align-items-center">
 								<div class="image">
@@ -99,7 +98,7 @@
 
 									<li class="nav-item">
 										<a href="../index.html" class="nav-link p-2  font-weight-bold _icon-dashboard">
-											Дашборд
+											<p>Дашборд</p>
 										</a>
 
 									</li>
@@ -109,7 +108,7 @@
 										</a>
 									</li>
 									<li class="nav-item">
-										<a href="#" class="nav-link font-weight-bold p-2 _icon-client">
+										<a href="./clients.html" class="nav-link font-weight-bold p-2 _icon-client">
 											<p>Клиенты</p>
 										</a>
 									</li>
@@ -177,7 +176,8 @@
 							</span>
 							<div class="todo-list__accordion accordion  card ">
 								<div class="text-left  accordion__header collapsed middle-title">
-									<button type="button" class="accordion__btn" data-card-widget="collapse"></button>
+									<button type="button" class="accordion__btn" data-animation-speed="0"
+										data-card-widget="collapse"></button>
 									<label class="accordion__checkbox checkbox">
 										<input hidden type="checkbox" class="checkbox__input" name="checkbox-smeta">
 									</label>
