--- a/pages/templatesc-category.html
+++ b/pages/templatesc-category.html
@@ -127,7 +127,16 @@
 		<!-- Конец главгый сайдбар -->
 
 		<div class="content-wrapper p-4 tooltip-margin-bottom">
-			<h1 class="big-title">Шаблоны</h1>
+			<div class="bc">
+				<ul class="bc__list">
+					<li><a href="#">Шаблоны</a></li>
+					<li><a href="#">Септики</a></li>
+					<li><a href="#">По количеству человек</a></li>
+				</ul>
+			</div>
+
+
+			<h1 class="big-title">По количеству человек</h1>
 
 			<div class="btn-group btn-dropdown mb-4">
 				<button type="button" class="btn btn-success _icon-plus d-flex align-items-center">Создать</button>
@@ -136,7 +145,7 @@
 				</button>
 				<div class="dropdown-menu" role="menu">
 					<a href="./create-template.html" class="dropdown-item font-weight-bold _icon-template ">Шаблон</a>
-					<button type="button" class="dropdown-item font-weight-bold _icon-folder">Папку</button>
+					<button type="button" class="dropdown-item font-weight-bold _icon-template">Папку</button>
 				</div>
 			</div>
 
@@ -147,8 +156,8 @@
 					</div>
 
 					<ul class="search-items__list ">
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-template ">
+							<span class="flex-fill "> Септики</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -158,8 +167,8 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-template ">
+							<span class="flex-fill "> Канализация</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -169,8 +178,8 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-template ">
+							<span class="flex-fill "> Фундамент</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -180,8 +189,8 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
+						<li class="search-items__item  _icon-template ">
+							<span class="flex-fill "> Скважины</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
