--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -39,7 +39,7 @@
   <div class="wrapper">
 
     <!-- Начала главгый сайдбар -->
-    <aside class="main-sidebar">
+    <aside class="main-sidebar sidebar-no-expand">
 
 
       <!-- Sidebar -->
@@ -52,11 +52,11 @@
         <div class="os-padding">
           <div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
             <div class="os-content px-3">
-              <a class="pl-3 mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#" role="button"></a>
+              <a class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#" role="button"></a>
               <!-- Sidebar user (optional) -->
               <div class="user-panel mt-4  mb-4 d-flex align-items-center">
                 <div class="image">
-                  <img src="./src/assets/img/avatar.png" class="img-rounded " alt="User Image">
+                  <img src="../src/assets/img/avatar.png" class="img-rounded " alt="User Image">
                 </div>
                 <div class="info d-flex align-items-center">
                   <a href="#" class="d-block ">Мой профиль</a>
@@ -113,7 +113,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="./templates.html" class="nav-link font-weight-bold _icon-client">
+                    <a href="./clients.html" class="nav-link font-weight-bold _icon-client">
 
                       <p> Клиенты</p>
 
@@ -186,7 +186,7 @@
           <tbody>
             <tr>
 
-              <td class="dtr-control" tabindex="0">1</td>
+              <td class="dtr-control" tabindex="0"></td>
               <td><span class="_mat-category">Мат</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Доски струганые половые</td>
@@ -197,7 +197,7 @@
             </tr>
             <tr>
 
-              <td class="dtr-control" tabindex="0">2
+              <td class="dtr-control" tabindex="0">
               </td>
               <td><span class="_rab-category">Раб</span></td>
               <td class="">01132</td>
@@ -209,7 +209,7 @@
             </tr>
             <tr>
 
-              <td class="dtr-control" tabindex="0">3</td>
+              <td class="dtr-control" tabindex="0"></td>
               <td><span class="_meh-category">Мех</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Циклевальная машина</td>
@@ -220,7 +220,7 @@
             </tr>
             <tr>
 
-              <td class="dtr-control" tabindex="0">4</td>
+              <td class="dtr-control" tabindex="0"></td>
               <td><span class="_doc-category">
                   Док
                 </span></td>
@@ -231,9 +231,10 @@
               <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
               <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
+
             <tr>
 
-              <td class="dtr-control" tabindex="0">5</td>
+              <td class="dtr-control" tabindex="0"></td>
               <td><span class="_mat-category">Мат</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Доски струганые половые</td>
@@ -241,6 +242,105 @@
               <td>60</td>
               <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
               <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
+            </tr>
+            <tr>
+
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
             </tr>
             <tr>
 
