--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -303,7 +303,71 @@
 			</div>
 
 			<ul class="todo-list" data-smeta data-widget="todo-list">
+				<li class="todo-list__item   d-flex" data-item-id="${idItem}">
+					<div class="todo-list__wrapper">
+						<div class="todo-list__contetn">
+							<span class="handle  _icon-darag">
+							</span>
+							<div class="todo-list__accordion accordion  card ">
+								<div class="text-left  accordion__header collapsed middle-title">
+									<button type="button" class="accordion__btn" data-animation-speed="0"
+										data-card-widget="collapse"></button>
+									<label class="accordion__checkbox checkbox">
+										<input hidden type="checkbox" class="checkbox__input" name="checkbox-smeta">
+									</label>
+									<div class="accordion__header-content">
+										<div class="accordion__name" onclick='editTextInput(event)'><input
+												placeholder="Введите текст" type="text" data-edit-input
+												onblur="saveTextInput(event)" class="input-default"></div>
+										<div class="accordion__select ">
+											<label class="accordion__name-select">Статус</label>
+											<div class="select-status">
+												<select class="select2  select2-hidden-accessible" name="Статус"
+													style="width: 100%;" data-select2-id="select-status-" tabindex="-1"
+													aria-hidden="true">
+													<option value="Выполнено" class="select-status__completed">Выполнено</option>
+													<option selected value="В работе" class="select-status__in-progress">В работе
+													</option>
+													<option value="Отменено" class="select-status__cancelled">Отменено</option>
+													<option value="Отложено" class="select-status__postponed">Отложено</option>
+												</select>
+											</div>
+										</div>
+										<div class="accordion__del-btn">
+											<button type="button" onclick="deleteItem('${idItem}')"
+												class="btn-del-big"><span>Удалить</span></button>
+										</div>
+									</div>
+								</div>
 
+
+
+								<div class="accordion__body card-body">
+									<!-- Этапы работы -->
+									<ul class="todo-list  overflow-hidden mt-3" data-stages data-widget="todo-list">
+
+
+									</ul>
+
+									<!-- Конец Этапы работы -->
+								</div>
+
+
+							</div>
+						</div>
+						<div class="todo-list__footer footer-list">
+							<button type="button" class="butt-plus" onclick="creatingStages('${idItem}')"
+								data-create-stage><span>Этап
+									работ</span></button>
+							<span class="footer-list__sum">Итого по смете: 0 р.</span>
+						</div>
+						<div class="mt-3">
+							<label class="very-small-title"> Комментарий</label>
+							<input type="text" class="input-default" name="комментарий">
+						</div>
+
+					</div>
+				</li>
 
 			</ul>
 
