feat: добавил модальное окно для клиента создание

--- a/pages/clients.html
+++ b/pages/clients.html
@@ -147,46 +147,50 @@
 
 					<ul class="search-items__list ">
 						<li class="search-items__item  _icon-user ">
-							<span class="flex-fill "> Павлюшенков Игорь Игнатьевич</span> <span>12.12.2024</span>
+							<a href="./client-page.html" class="flex-fill "> Павлюшенков Игорь Игнатьевич</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="search-items__item  _icon-user ">
-							<span class="flex-fill "> Николаев Бартез Игроревич</span> <span>12.12.2024</span>
+							<a href="./client-page.html" class="flex-fill "> Николаев Бартез Игроревич</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="search-items__item  _icon-user ">
-							<span class="flex-fill "> Вертикашин Кондрат Паскальевич</span> <span>12.12.2024</span>
+							<a href="./client-page.html" class="flex-fill "> Вертикашин Кондрат Паскальевич</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="search-items__item  _icon-user ">
-							<span class="flex-fill "> Павлюшенков Игорь Игнатьевич</span> <span>12.12.2024</span>
+							<a href="./client-page.html" class="flex-fill "> Павлюшенков Игорь Игнатьевич</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
