--- a/pages/template-category.html
+++ b/pages/template-category.html
@@ -162,8 +162,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
@@ -173,8 +173,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
@@ -184,8 +184,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
@@ -195,8 +195,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
