--- a/pages/templates.html
+++ b/pages/templates.html
@@ -148,46 +148,46 @@
 
 					<ul class="search-items__list ">
 						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
+							<a href="./template-category.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
+							<a href="./template-category.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
+							<a href="./template-category.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="search-items__item  _icon-folder ">
-							<a href="./templatesc-category.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
+							<a href="./template-category.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">что-то тут </button>
-									<button type="button" class="dropdown-item">что-то тут</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
