--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -230,7 +230,8 @@
 							</select>
 						</div>
 						<button type="button" class="list-input__add-btn add-btn"></button>
-						<button type="button" class="list-input__butt-plus butt-plus">Создать клиента</button>
+						<button type="button" class="list-input__butt-plus butt-plus" data-toggle="modal"
+							data-target="#modal-lg">Создать клиента</button>
 					</div>
 					<div class="list-input__item">
 						<label class="list-input__label">Менеджер</label>
@@ -303,71 +304,7 @@
 			</div>
 
 			<ul class="todo-list" data-smeta data-widget="todo-list">
-				<li class="todo-list__item   d-flex" data-item-id="${idItem}">
-					<div class="todo-list__wrapper">
-						<div class="todo-list__contetn">
-							<span class="handle  _icon-darag">
-							</span>
-							<div class="todo-list__accordion accordion  card ">
-								<div class="text-left  accordion__header collapsed middle-title">
-									<button type="button" class="accordion__btn" data-animation-speed="0"
-										data-card-widget="collapse"></button>
-									<label class="accordion__checkbox checkbox">
-										<input hidden type="checkbox" class="checkbox__input" name="checkbox-smeta">
-									</label>
-									<div class="accordion__header-content">
-										<div class="accordion__name" onclick='editTextInput(event)'><input
-												placeholder="Введите текст" type="text" data-edit-input
-												onblur="saveTextInput(event)" class="input-default"></div>
-										<div class="accordion__select ">
-											<label class="accordion__name-select">Статус</label>
-											<div class="select-status">
-												<select class="select2  select2-hidden-accessible" name="Статус"
-													style="width: 100%;" data-select2-id="select-status-" tabindex="-1"
-													aria-hidden="true">
-													<option value="Выполнено" class="select-status__completed">Выполнено</option>
-													<option selected value="В работе" class="select-status__in-progress">В работе
-													</option>
-													<option value="Отменено" class="select-status__cancelled">Отменено</option>
-													<option value="Отложено" class="select-status__postponed">Отложено</option>
-												</select>
-											</div>
-										</div>
-										<div class="accordion__del-btn">
-											<button type="button" onclick="deleteItem('${idItem}')"
-												class="btn-del-big"><span>Удалить</span></button>
-										</div>
-									</div>
-								</div>
 
-
-
-								<div class="accordion__body card-body">
-									<!-- Этапы работы -->
-									<ul class="todo-list  overflow-hidden mt-3" data-stages data-widget="todo-list">
-
-
-									</ul>
-
-									<!-- Конец Этапы работы -->
-								</div>
-
-
-							</div>
-						</div>
-						<div class="todo-list__footer footer-list">
-							<button type="button" class="butt-plus" onclick="creatingStages('${idItem}')"
-								data-create-stage><span>Этап
-									работ</span></button>
-							<span class="footer-list__sum">Итого по смете: 0 р.</span>
-						</div>
-						<div class="mt-3">
-							<label class="very-small-title"> Комментарий</label>
-							<input type="text" class="input-default" name="комментарий">
-						</div>
-
-					</div>
-				</li>
 
 			</ul>
 
@@ -423,9 +360,7 @@
 	<script src="../public/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
 	<script src="../public/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
 	<script src="../public/plugins/bs-stepper/js/bs-stepper.min.js"></script>
-	<!-- JQVMap -->
-	<!-- <script src="./public/plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="./public/plugins/jqvmap/maps/jquery.vmap.usa.js"></script> -->
+
 	<!-- jQuery Knob Chart -->
 	<script src="../plugins/jquery-knob/jquery.knob.min.js"></script>
 	<!-- daterangepicker -->
@@ -433,52 +368,77 @@
 
 	<script src="../public/plugins/daterangepicker/daterangepicker.js"></script>
 
-	<!-- Tempusdominus Bootstrap 4 -->
-	<!-- overlayScrollbars -->
-	<!-- <script src="./public/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
 
 	<!-- Summernote -->
 	<script src="../public/plugins/summernote/summernote-bs4.min.js"></script>
-	<!-- AdminLTE App -->
-	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
-	<!-- AdminLTE for demo purposes -->
-	<!-- <script src="./public/dist/js/demo.js"></script> -->
 
-	<!-- <script src="./public/dist/js/pages/dashboard.js"></script> -->
+	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+
 
 	<script type="module" src="../src/assets/js/main.js"></script>
 
 
-	<script>
-		$(function () {
-			//Initialize Select2 Elements
+	<div class="modal fade" id="modal-lg" style="display: none;" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content modal-custom">
+				<form class="modal-custom__content">
+					<div class="modal-custom__title middle-title mb-3">Создание клиента</div>
+					<div class="user-info">
 
-			//Initialize Select2 Elements
-			$('.select2bs4').select2({
-				theme: 'bootstrap4'
-			})
-
-			//Datemask dd/mm/yyyy
-			$('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' })
-			//Datemask2 mm/dd/yyyy
-			$('.datemask2').inputmask('mm.dd.yyyy')
-			//Money Euro
-			$('[data-mask]').inputmask()
-
-
-
-
-
-
-
-
-
-		})
-
-
-
-
-	</script>
+						<div class="user-info__item">
+							<div class="user-info__label">Ф.И.О</div>
+							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Имя"
+									data-error="Ошибка" placeholder="Введите Ф.И.О" class="input-default"></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label">Адрес</div>
+							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Адрес"
+									data-error="Ошибка" placeholder="Введите Адрес" class="input-default"></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label">Координаты</div>
+							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Координаты"
+									data-error="Ошибка" placeholder="Введите координаты" class="input-default"></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label">Комментарии</div>
+							<div class="user-info__contetn"><textarea name="Комментарии" placeholder="Введите комментарии "
+									class="textarea-default"></textarea></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label mb-0">Инженер</div>
+							<div class="user-info__contetn">
+								<select class="list-input__select  select2" multiple="multiple" name="Менеджер">
+									<option></option>
+									<option>Дмитрий</option>
+									<option>Наталья</option>
+									<option>Дмитрий(Митя)</option>
+								</select>
+								<button type="button" class="list-input__add-btn add-btn"></button>
+							</div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label mb-0">Инженер</div>
+							<div class="user-info__contetn">
+								<select class="list-input__select  select2" multiple="multiple" name="Инженер">
+									<option></option>
+									<option>Биба</option>
+									<option>Боба</option>
+								</select>
+								<button type="button" class="list-input__add-btn add-btn"></button>
+							</div>
+						</div>
+					</div>
+					<div class="d-flex mt-5 justify-content-between modal-custom__footer">
+						<button type="button" data-dismiss="modal" class="butt">Отмена</button>
+						<button type="submit" class="butt-success ">Создать клиента</button>
+					</div>
+				</form>
+			</div>
+			<!-- /.modal-content -->
+		</div>
+		<!-- /.modal-dialog -->
+	</div>
 </body>
 
 </html>
