--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -142,14 +142,14 @@
 
 
       <div class="d-flex mb-4">
-        <div class="btn-group btn-dropdown mr-3">
-          <button type="button" class="btn btn-success">Экспортировать</button>
-          <button type=" button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-
+        <div class="btn-group btn-dropdown  mr-3">
+          <button type="button" class="butt-success dropdown-toggle d-flex align-items-center" data-toggle="dropdown"
+            aria-expanded="false">Экспортировать
           </button>
-          <div class="dropdown-menu" role="menu">
-            <a class="dropdown-item" href="#">Пустая смета</a>
-            <a class="dropdown-item" href="#">Из шаблона</a>
+          <div class="dropdown-menu">
+            <a href="./create-template.html" class="dropdown-item _icon-template">Шаблон</a>
+            <button type="button" class="dropdown-item _icon-folder">Папку</button>
+
           </div>
         </div>
 
