--- a/pages/template-category.html
+++ b/pages/template-category.html
@@ -136,19 +136,22 @@
 			</div>
 
 
-			<h1 class="big-title">По количеству человек</h1>
-
-			<div class="btn-group btn-dropdown mb-4">
-				<button type="button" class="btn btn-success _icon-plus d-flex align-items-center">Создать</button>
-				<button type=" button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-
-				</button>
-				<div class="dropdown-menu" role="menu">
-					<a href="./create-template.html" class="dropdown-item font-weight-bold _icon-template ">Шаблон</a>
-					<button type="button" class="dropdown-item font-weight-bold _icon-template">Папку</button>
-				</div>
+			<div class="d-flex align-items-center mb-4">
+				<button type="button" class="d-flex align-items-center _icon-arrow-back"></button>
+				<h1 class="big-title mb-0">По количеству человек</h1>
 			</div>
 
+
+			<div class="btn-group btn-dropdown mb-4">
+				<button type="button" class="butt-success dropdown-toggle _icon-plus d-flex align-items-center"
+					data-toggle="dropdown" aria-expanded="false">Создать
+				</button>
+				<div class="dropdown-menu">
+					<a href="./create-template.html" class="dropdown-item _icon-template">Шаблон</a>
+					<button type="button" class="dropdown-item _icon-folder">Папку</button>
+
+				</div>
+			</div>
 			<div class="container-content">
 				<div class="search-items" data-search-items>
 					<div class="search-items__input _icon-search mb-3">
