--- a/pages/templates.html
+++ b/pages/templates.html
@@ -129,14 +129,15 @@
 		<div class="content-wrapper p-4 tooltip-margin-bottom">
 			<h1 class="big-title">Шаблоны</h1>
 
-			<div class="btn-group btn-dropdown mb-4">
-				<button type="button" class="btn btn-success _icon-plus d-flex align-items-center">Создать</button>
-				<button type=" button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 
+			<div class="btn-group btn-dropdown mb-4">
+				<button type="button" class="butt-success dropdown-toggle _icon-plus d-flex align-items-center"
+					data-toggle="dropdown" aria-expanded="false">Создать
 				</button>
-				<div class="dropdown-menu" role="menu">
-					<a href="./create-template.html" class="dropdown-item font-weight-bold _icon-template ">Шаблон</a>
-					<button type="button" class="dropdown-item font-weight-bold _icon-folder">Папку</button>
+				<div class="dropdown-menu" style="">
+					<button type="button" class="dropdown-item _icon-template">Шаблон</button>
+					<button type="button" class="dropdown-item _icon-folder">Папку</button>
+
 				</div>
 			</div>
 
