--- a/pages/clients.html
+++ b/pages/clients.html
@@ -126,18 +126,15 @@
 		<!-- Конец главгый сайдбар -->
 
 		<div class="content-wrapper p-4 tooltip-margin-bottom">
-			<h1 class="big-title">Шаблоны</h1>
+			<h1 class="big-title">Клиенты</h1>
 
-			<div class="btn-group btn-dropdown mb-4">
-				<button type="button" class="btn btn-success _icon-plus d-flex align-items-center">Создать</button>
-				<button type=" button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 
-				</button>
-				<div class="dropdown-menu" role="menu">
-					<a href="./create-template.html" class="dropdown-item font-weight-bold _icon-user ">Клиента</a>
-					<button type="button" class="dropdown-item font-weight-bold _icon-folder">Папку</button>
-				</div>
-			</div>
+			<button type="button" class=" mb-4 butt-success _icon-plus d-flex align-items-center" data-toggle="modal"
+				data-target="#modal-lg">Создать
+				клиента</button>
+
+
+
 
 			<div class="container-content">
 				<div class="search-items" data-search-items>
@@ -249,14 +246,71 @@
 	<script src="../public/plugins/summernote/summernote-bs4.min.js"></script>
 	<!-- AdminLTE App -->
 	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
-	<!-- AdminLTE for demo purposes -->
-	<!-- <script src="./public/dist/js/demo.js"></script> -->
-	<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-	<script src="../public/dist/js/pages/dashboard.js"></script>
+
 
 	<script type="module" src="../src/assets/js/main.js"></script>
 
+	<div class="modal fade" id="modal-lg" style="display: none;" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content modal-custom">
+				<form class="modal-custom__content">
+					<div class="modal-custom__title middle-title mb-3">Создание клиента</div>
+					<div class="user-info">
 
+						<div class="user-info__item">
+							<div class="user-info__label">Ф.И.О</div>
+							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Имя"
+									data-error="Ошибка" placeholder="Введите Ф.И.О" class="input-default"></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label">Адрес</div>
+							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Адрес"
+									data-error="Ошибка" placeholder="Введите Адрес" class="input-default"></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label">Координаты</div>
+							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Координаты"
+									data-error="Ошибка" placeholder="Введите координаты" class="input-default"></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label">Комментарии</div>
+							<div class="user-info__contetn"><textarea name="Комментарии" placeholder="Введите комментарии "
+									class="textarea-default"></textarea></div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label mb-0">Менеджер</div>
+							<div class="user-info__contetn">
+								<select class="list-input__select  select2" multiple="multiple" name="Менеджер">
+									<option></option>
+									<option>Дмитрий</option>
+									<option>Наталья</option>
+									<option>Дмитрий(Митя)</option>
+								</select>
+								<button type="button" class="list-input__add-btn add-btn"></button>
+							</div>
+						</div>
+						<div class="user-info__item">
+							<div class="user-info__label mb-0">Инженер</div>
+							<div class="user-info__contetn">
+								<select class="list-input__select  select2" multiple="multiple" name="Инженер">
+									<option></option>
+									<option>Биба</option>
+									<option>Боба</option>
+								</select>
+								<button type="button" class="list-input__add-btn add-btn"></button>
+							</div>
+						</div>
+					</div>
+					<div class="d-flex mt-5 justify-content-between modal-custom__footer">
+						<button type="button" data-dismiss="modal" class="butt">Отмена</button>
+						<button type="submit" class="butt-success ">Создать клиента</button>
+					</div>
+				</form>
+			</div>
+
+		</div>
+
+	</div>
 
 </body>
 
