--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -320,7 +320,7 @@
 				<label class="very-small-title"> Комментарий к КП которого на самом деле больше нет</label>
 				<input type="text" class="input-default" name="комментарий">
 			</div>
-			<div class="tooltip-smeta container-content">
+			<div class="bulkActionBar container-content">
 				<div class="btn-group btn-dropdown  ">
 					<button type="button" class="butt-success dropdown-toggle d-flex align-items-center"
 						data-toggle="dropdown" aria-expanded="false">Экспортировать
@@ -333,6 +333,7 @@
 				</div>
 				<button class="butt">Обновить цены</button>
 				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()">Удалить выброное</button>
+				<div>Кол-во выбраных: <span data-selected-count>0</span></div>
 			</div>
 		</div>
 
